--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Sample Webpage</title> 
+    <title>My Sample Webpage</title> 
     <style> 
         body { 
-            font-family: Times new Romam; 
-            background-color: #00000; 
+            font-family: Arial; 
+            background-color: #ffc100; 
             margin: 0; 
             padding: 20px; 
-            color: #FFC100; 
+            color: #ff5733; 
         } 
  
         header { 
-            background-color: #FFC100; 
+            background-color: #581845; 
             color: white; 
             padding: 10px 0; 
             text-align: center; 
@@ -28,14 +28,14 @@
  
         nav a { 
             text-decoration: none; 
-            color: #96C3EB; 
+            color: #90Dc3f; 
             margin: 0 15px; 
             font-weight: bold; 
         } 
  
         main { 
             padding: 20px; 
-            background-color: #96C3EB; 
+            background-color: #c7D039; 
             border-radius: 8px; 
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
         } 
@@ -44,14 +44,14 @@
             text-align: center; 
             margin-top: 20px; 
             font-size: 0.8em; 
-            color: #FFC100; 
+            color: #ffs733; 
         } 
     </style> 
 </head> 
 <body> 
  
     <header> 
-        <h1>Welcome to Emily Orencia's Webpage!</h1> 
+        <h1>Welcome to Emily's Sample Webpage</h1> 
     </header> 
  
     <nav> 
@@ -62,7 +62,8 @@
  
     <main> 
         <h2>About This Page</h2> 
-        <p>This webapage is made by Kristienne Emily F. Orencia of 8 - Our Lady of Grace.<p>
+        <p>This webpage is made by Kristienne Emily F. Orencia from 8 - Our Lady of Grace.</p> 
+         
         <h3>Features</h3> 
         <ul> 
             <li>Easy to edit and customize.</li> 
@@ -72,7 +73,7 @@
     </main> 
  
     <footer> 
-        &copy; 2024 Orencia's Webpage. All rights reserved. 
+        &copy; 2024 Emily's Sample Webpage. All rights reserved. 
     </footer> 
  
 </body> 
