--- a/index.html
+++ b/index.html
@@ -1,57 +1,53 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-    <meta charset="UTF-8"> 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>My Sample Webpage</title> 
-    <style> 
-        body { 
-            font-family: Arial; 
-            background-color: #ffc100; 
-            margin: 0; 
-            padding: 20px; 
-            color: #ff5733; 
-        } 
- 
-       header { 
-            background-color: #581845; 
-            color: white; 
-            padding: 10px 0; 
-            text-align: center; 
-        } 
- 
-        nav { 
-            margin: 20px 0; 
-            text-align: center; 
-        } 
- 
-        nav a { 
-            text-decoration: none; 
-            color: #90Dc3f; 
-            margin: 0 15px; 
-            font-weight: bold; 
-        } 
- 
-        main { 
-            padding: 20px; 
-            background-color: #c7D039; 
-            border-radius: 8px; 
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-        } 
- 
-        footer { 
-            text-align: center; 
-            margin-top: 20px; 
-            font-size: 0.8em; 
-            color: #ffs733; 
-        } 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Sample Webpage</title>
+ <style>
+ body {
+ font-family: Arial, sans-serif;
+ background-color: # #ffffc5;
+ margin: 0;
+ padding: 20px;
+ color: #ff5733;
+ }
+ header {
+ background-color: #fce8d7;
+ color: black;
+ padding: 10px 0;
+ text-align: center;
+ }
+ nav {
+ margin: 20px 0;
+ text-align: center;
+ }
+ nav a {
+ text-decoration: none;
+ color: #c79379;
+ margin: 0 15px;
+ font-weight: bold;
+ }
+ main {
+ padding: 20px;
+ background-color: #fff;
+ border-radius: 8px;
+ box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+ }
+  
+footer { 
+text-align: center; 
+margin-top: 20px; 
+font-size: 0.8em; 
+ color: #ffs733; 
+ } 
     </style> 
 </head> 
 <body> 
  
     <header> 
-        <h1>Welcome to Emily's Sample Webpage</h1> 
+        <h1>Welcome to Emily's Sample Webpage!</h1> 
     </header> 
  
     <nav> 
@@ -62,7 +58,7 @@
  
     <main> 
         <h2>About This Page</h2> 
-        <p>This webpage is made by Kristienne Emily F. Orencia from 8 - Our Lady of Grace.</p> 
+        <p>Hello and Welcome! This webpage is made by Kristienne Emily F. Orencia from 8 - Our Lady of Grace.</p> 
          
         <h3>Features</h3> 
         <ul> 
